update index colors

--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@
         <!-- Header -->
         <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('../img/carousel-2.jpg');">
             <div class="container py-5" style="height: 450px;">
-                <h1 class="display-2 text-white animated slideInDown mb-4">Make A Brighter Future For Your Child</h1>
+                <h1 class="display-2 animated slideInDown mb-4" style="color: #ffffff; margin-top: 80px; text-align: left; max-width: 70%;">Make A Brighter Future For Your Child</h1>
             </div>
         </div>
         <!-- Header End -->
 
-        <!-- Facilities Start -->
-        <div class="container-xxl py-5">
+        <!-- Web Detail Start -->
+        <div class="container-xxl py-5" style="background-color: #f3e3ea;">
             <div class="container">
-                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">School Facilities</h1>
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 700px;">
+                    <h1 class="mb-3" style="margin-top: 50px">What is The Learning Compass?</h1>
                     <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
                 </div>
              </div>
         </div>
-        <!-- Facilities End -->
+        <!-- Web Detail End -->
 
         <div class="divider"></div>
 
 
-        <!-- About Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
+        <!-- Info Hub Start -->
+        <div class="container-xxl py-5" style="background-color: #e1d0eb;">
+            <div class="container" >
                 <div class="row g-5 align-items-center">
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" >
                         <h1 class="mb-4">Info Hub</h1>
                         <p>Discover a wealth of resources in our Info Hub, designed to help you navigate the 
                             complexities of migrating and settling in Victoria.
@@ -95,12 +95,12 @@
                 </div>
             </div>
         </div>
-        <!-- About End -->
+        <!-- Info Hub End -->
 
-        <div class="divider"></div>
+        <div class="divider" ></div>
 
-        <!-- Call To Action Start -->
-        <div class="container-xxl py-5">
+        <!-- Suburban Portal Start -->
+        <div class="container-xxl py-5" style="background-color: #ccd3cf;">
             <div class="container">
                 <div class="bg-light rounded">
                     <div class="row g-0">
@@ -122,13 +122,13 @@
                 </div>
             </div>
         </div>
-        <!-- Call To Action End -->
+        <!-- Suburban Portal End -->
 
         <div class="divider"></div>
 
 
     <!-- News Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5" style="background-color: #d0e2e1;">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 550px;">
                 <h1 class="mb-3">Latest News!</h1>
