--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 550px;">
                 <h1 class="mb-3">Latest News!</h1>
-                <p>Check out the relevent news articles.</p>
+                <p>Check out the relevant news articles.</p>
             </div>
             <div class="owl-carousel news-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="news-item bg-light rounded p-5" id="news-item-1">
