--- a/pages/navbar-footer/navbar.html
+++ b/pages/navbar-footer/navbar.html
@@ -43,19 +43,21 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
                     <a href="../index.html" class="nav-item nav-link">Home</a>
-                    <a href="../pages/infohub.html" class="nav-item nav-link">Info Hub</a>
-                    <a href="../pages/subport.html" class="nav-item nav-link">Suburban Portal</a>
-                    <a href="../pages/x.html" class="nav-item nav-link">Curriculum</a>
-
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Migration & Community Hub</a>
+                        <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
+                            <a href="../pages/infohub.html" class="nav-item nav-link">Info Hub</a>
+                            <a href="../pages/subport.html" class="nav-item nav-link">Suburban Portal</a>
+                        </div>
+                    </div>
+                    <a href="../pages/curriculum.html" class="nav-item nav-link">Education Curriculum</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Learning Games</a>
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
-                            <a href="../pages/X.html" class="nav-item nav-link">Slang</a>
-                            <a href="../pages/X.html" class="nav-item nav-link">Animals</a>
-                            <a href="../pages/X.html" class="nav-item nav-link">National Calendar</a>
+                            <a href="../pages/X.html" class="nav-item nav-link">Aussie Slang</a>
+                            <a href="../pages/X.html" class="nav-item nav-link">Aussie Animals</a>
                         </div>
                     </div>
-                    <a href="../pages/x.html" class="nav-item nav-link">Programs</a>
                 </div>
                 <a href="../pages/contact.html" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Contact Us<i class="fa fa-arrow-right ms-3"></i></a>
             </div>
