--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container-xxl py-5" style="background-color: #f3e3ea;">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 700px;">
-                    <h1 class="mb-3" style="margin-top: 50px">What is The Learning Compass?</h1>
+                    <h1 class="mb-3" style="margin-top: 50px"></h1>
                     <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
                 </div>
              </div>
