Added test to challenges and heading, also links to articles

--- a/pages/infohub.html
+++ b/pages/infohub.html
@@ -114,18 +114,20 @@
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 450px;">
                     <h1 class="mb-3">Challenges</h1>
-                    <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                    <p>Explore our challenges designed to inspire action and drive positive change in our communities.</p>
                 </div>
-                <div class="row g-4">
+                <div class="row g-4 justify-content-center">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="classes-item">
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
                                 <img class="img-fluid rounded-circle" src="../img/classes-1.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4">Language barrier1 <span class="arrow">&#9660;</span></button>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4">Language Barrier<span class="arrow">&#9660;</span></button>
                                 <div class="collapsible-content">
-                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
+                                    <p>New migrant kids face language barriers (social & school). Apps, subtitles, & active learning can help. Even slang becomes easier with exposure and questions, aiding everyday life.</p>
+                                    <p>Example: India has the second-largest English-speaking population, but fluency remains low (10%).</p>
+                                    <a href="https://blackboardradio.com/blogs/6-difficulties-in-teaching-english-to-indian-students/#:~:text=The%20Indian%20education%20system%20often,use%20of%20prepositions%20and%20articles">Read more</a>
                                 </div>
                             </div>
                         </div>
@@ -136,9 +138,11 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-2.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Language barrier2 <span class="arrow">&#9660;</span></button>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Cultural Bias<span class="arrow">&#9660;</span></button>
                                 <div class="collapsible-content">
-                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
+                                    <p>New country, new customs causes culture shock for some Asian kids adapting to casual, individualistic Australia.</p>
+                                    <p>Example: Chinese migrants in AU face tougher integration (language, isolation, discrimination).</p>
+                                    <a href="https://www.scmp.com/week-asia/politics/article/3118848/mainland-chinese-migrants-australia-adapting-new-home-made-worse">Read more</a>
                                 </div>
                             </div>
                         </div>
@@ -149,9 +153,11 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-3.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Language barrier3 <span class="arrow">&#9660;</span></button>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Education Gaps<span class="arrow">&#9660;</span></button>
                                 <div class="collapsible-content">
-                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
+                                    <p>For parents, understanding Australian education secures optimal learning. Learn about school levels, curriculum, and enrolment.</p>
+                                    <p>Example: Migrant boys' lower test scores imply cultural impact on education.</p>
+                                    <a href="https://link.springer.com/article/10.1007/s13384-019-00321-7">Read more</a>
                                 </div>
                             </div>
                         </div>
@@ -162,9 +168,11 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-4.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Language barrier4 <span class="arrow">&#9660;</span></button>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Social Isolation<span class="arrow">&#9660;</span></button>
                                 <div class="collapsible-content">
-                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
+                                    <p>New migrant children face friend-making challenges; patience, shared hobbies, and positive attitude foster friendships.</p>
+                                    <p>Example: Australian migrants integrating into society report higher well-being than those maintaining only their heritage culture.</p>
+                                    <a href="https://theconversation.com/migrants-who-adapt-to-australian-culture-say-theyre-happier-than-those-who-dont-117264">Read more</a>
                                 </div>
                             </div>
                         </div>
@@ -175,22 +183,11 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-5.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Language barrier5 <span class="arrow">&#9660;</span></button>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Mental health<span class="arrow">&#9660;</span></button>
                                 <div class="collapsible-content">
-                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="classes-item">
-                            <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                                <img class="img-fluid rounded-circle" src="../img/classes-6.jpg" alt="">
-                            </div>
-                            <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Language barrier6 <span class="arrow">&#9660;</span></button>
-                                <div class="collapsible-content">
-                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
+                                    <p>Migrant children face mental health challenges due to language barriers, cultural discrimination, and social isolation.</p>
+                                    <p>Example: 4 million Australians diagnosed with mental illness, facing multicultural barriers.</p>
+                                    <a href="https://www.sbs.com.au/language/turkish/en/podcast-episode/settlement-guide-migrant-communities-are-less-likely-to-access-mental-health-services/8goi3wc2h">Read more</a>
                                 </div>
                             </div>
                         </div>
