--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 700px;">
                     <h1 class="mb-3" style="margin-top: 50px"></h1>
-                    <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                    <p>Helping migrant families in Victoria find schools, learn English, and fit into the culture for an easier new start.</p>
                 </div>
              </div>
         </div>
@@ -65,8 +65,8 @@
 
 
         <!-- Info Hub Start -->
-        <div class="container-xxl py-5" style="background-color: #e1d0eb;">
-            <div class="container" >
+        <div class="container-xxl py-5" >
+            <div class="container" style="background: linear-gradient(to bottom, #ffffff 0%, #e1d0eb 100%);">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" >
                         <h1 class="mb-4">Info Hub</h1>
@@ -100,8 +100,8 @@
         <div class="divider" ></div>
 
         <!-- Suburban Portal Start -->
-        <div class="container-xxl py-5" style="background-color: #ccd3cf;">
-            <div class="container">
+        <div class="container-xxl py-5">
+            <div class="container" style="background: linear-gradient(to bottom, #ffffff 0%, #ccd3cf 100%);" >
                 <div class="bg-light rounded">
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
@@ -128,8 +128,8 @@
 
 
     <!-- News Start -->
-    <div class="container-xxl py-5" style="background-color: #d0e2e1;">
-        <div class="container">
+    <div class="container-xxl py-5">
+        <div class="container" style="background: linear-gradient(to bottom, #ffffff 0%, #d0e2e1 100%);" >
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 550px;">
                 <h1 class="mb-3">Latest News!</h1>
                 <p>Check out the relevant news articles.</p>
