--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
 
         <!-- Info Hub Start -->
-        <div class="container-xxl py-5" >
-            <div class="container" style="background: linear-gradient(to bottom, #ffffff 0%, #e1d0eb 100%);">
+        <div class="container-xxl py-5" style="background-color: #e1d0eb;">
+            <div class="container" >
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" >
                         <h1 class="mb-4">Info Hub</h1>
@@ -100,8 +100,8 @@
         <div class="divider" ></div>
 
         <!-- Suburban Portal Start -->
-        <div class="container-xxl py-5">
-            <div class="container" style="background: linear-gradient(to bottom, #ffffff 0%, #ccd3cf 100%);" >
+        <div class="container-xxl py-5" style="background-color: #ccd3cf;">
+            <div class="container"  >
                 <div class="bg-light rounded">
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
@@ -128,8 +128,8 @@
 
 
     <!-- News Start -->
-    <div class="container-xxl py-5">
-        <div class="container" style="background: linear-gradient(to bottom, #ffffff 0%, #d0e2e1 100%);" >
+    <div class="container-xxl py-5" style="background-color: #d0e2e1;">
+        <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 550px;">
                 <h1 class="mb-3">Latest News!</h1>
                 <p>Check out the relevant news articles.</p>
