--- a/pages/subport.html
+++ b/pages/subport.html
@@ -59,7 +59,7 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
-                  <h1 class="mb-3">What is Suburban Portal?</h1>
+                  <h2 class="mb-3">Explore School Locations for Migrant Communities in Victoria</h2>
                   <p>It is a map designed to display the local government (LGA) and suburban areas 
                       related to the where the top five migrant demographics resides in Victoria. It serves as 
                       a centralized hub where parents can view the surrounding schools and its details.</p>
@@ -73,7 +73,7 @@
 
 
         <section class="section1" id="section1">
-          <h1>School Locator</h1>
+          <h4 class="centered-heading">Community School Finder: Choose Your Demographic</h4>
           <div class="container">
             <div class="map-bar">
               <div class="tab-container">
