--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
 
 
         <!-- Info Hub Start -->
-        <div class="container-xxl py-5" style="background-color: #e1d0eb;">
-            <div class="container" >
+        <div class="container-xxl py-5">
+            <div class="container rounded" style="background-color: #e1d0eb; min-height: 500px; " >
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" >
-                        <h1 class="mb-4">Info Hub</h1>
-                        <p>Discover a wealth of resources in our Info Hub, designed to help you navigate the 
+                        <h1 class="mb-4" style="margin-left: 35px;">Info Hub</h1>
+                        <p style="margin-left: 35px;">Discover a wealth of resources in our Info Hub, designed to help you navigate the 
                             complexities of migrating and settling in Victoria.
                         </p>
                         <div class="row g-4 align-items-center">
-                            <div class="col-sm-6">
+                            <div class="col-sm-6" style="margin-left: 35px;">
                                 <a class="btn btn-primary rounded-pill py-3 px-5" href="../pages/infohub.html">Read More</a>
                             </div>
                         </div>
@@ -101,17 +101,17 @@
 
         <!-- Suburban Portal Start -->
         <div class="container-xxl py-5">
-            <div class="container" >
-                <div class="bg-light rounded">
+            <div class="container rounded" style="background-color: #d5f1f0; min-height: 500px; " >
+                <div class="bg-light rounded" >
                     <div class="row g-0">
-                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
-                            <div class="position-relative h-100">
-                                <img class="position-absolute w-100 h-100 rounded" src="../img/2.jpg" style="object-fit: cover;">
+                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px; background-color: #d5f1f0;">
+                            <div class="position-relative h-100" >
+                                <img class="position-absolute w-100 h-100 rounded" src="../img/2.jpg" style="object-fit: cover; margin-top: 50px;  margin-left: 25px;">
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                            <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <h1 class="mb-4">Suburban Portal</h1>
+                            <div class="h-100 d-flex flex-column justify-content-center p-5" style="background-color: #d5f1f0;">
+                                <h1 class="mb-4" style="margin-top: 90px;">Suburban Portal</h1>
                                 <p class="mb-4">Find your community in Victoria with our Suburban Portal, 
                                     connecting you to local services, schools, and migrant networks.
                                 </p>
@@ -128,7 +128,7 @@
 
 
     <!-- News Start -->
-    <div class="container-xxl py-5"  style="background-color: #d0e2e1;">
+    <div class="container-xxl py-5"  style="background-color: #d0e2d1;">
         <div class="container" >
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 550px;">
                 <h1 class="mb-3">Latest News!</h1>
