--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <!-- Template Stylesheet -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 
 <body>
@@ -54,8 +55,9 @@
         <div class="container-xxl py-5" style="background-color: #f3e3ea;">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 700px;">
-                    <h1 class="mb-3" style="margin-top: 50px"></h1>
-                    <p>Helping migrant families in Victoria find schools, learn English, and fit into the culture for an easier new start.</p>
+                    <h2 class="centered-heading">Welcome to Migrant Family Support Hub</h2>
+                    <p>A platform dedicated to assisting migrant families in Victoria. Discover resources, tools, and fun learning games to ease your transition into Australian culture and education.</p>
+                    <p>Empower your children with our tailored curriculum and language learning activities for a confident start in their new home.</p>
                 </div>
              </div>
         </div>
