added text to graphs

--- a/pages/infohub.html
+++ b/pages/infohub.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Kider - Preschool Website Template</title>
+    <title>Learning Compass - Info Hub</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -64,12 +64,13 @@
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <h1>Migrations in Austar</h1>
-                                <p class="mb-4">Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                                <h4>Australia's Migration Highlights: 2022-23</h4>
+                                <p class="mb-4">Explore key migration trends in Australia for 2022-23. Understand the impact of temporary visa holders and shifting departure rates.</p>
                                 <ul>
-                                    <li>Point 1: Description of point 1.</li>
-                                    <li>Point 2: Description of point 2.</li>
-                                    <li>Point 3: Description of point 3.</li>
+                                    <li>Record Migration: Highest net gain in history.</li>
+                                    <li>Surge in Arrivals: Exceeded pre-pandemic levels, driven by temporary visas.</li>
+                                    <li>Low Departures: Contributed significantly to the net gain.</li>
+                                    <li>Future Trends: Departures of temporary visa holders will shape future migration patterns.</li>
                                 </ul>
                             </div>
                         </div>
@@ -92,12 +93,14 @@
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <h1>Migrations in Austar</h1>
-                                <p class="mb-4">Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                                <h4>Victoria's Overseas-Born Population Insights</h4>
+                                <p class="mb-4">In 2021, 29.3% of Australians were born overseas, mainly from England, India, China, and New Zealand. Key trends include:</p>
                                 <ul>
-                                    <li>Point 1: Description of point 1.</li>
-                                    <li>Point 2: Description of point 2.</li>
-                                    <li>Point 3: Description of point 3.</li>
+                                    <li>India: Growth from 31.14k in 2001 to 272.25k in 2021.</li>
+                                    <li>China: Increase from 38.86k in 2001 to 182.14k in 2021.</li>
+                                    <li>Vietnam: Fluctuating trend, reaching 99.35k in 2021.</li>
+                                    <li>Sri Lanka: Consistent rise to 72.1k in 2021.</li>
+                                    <li>Philippines: Steady growth to 71.25k in 2021.</li>
                                 </ul>
                             </div>
                         </div>
