--- a/pages/subport.html
+++ b/pages/subport.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <title>Learning Compass - Suburban Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="">
     <meta name="description" content="">
