update header images and css design

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <!-- Header End -->
 
         <!-- Web Detail Start -->
-        <div class="container-xxl py-5" style="background-color: #f3e3ea;">
-            <div class="container">
+        <div class="container-xxl py-5" >
+            <div class="container rounded" style="background-color: #f3e3ea; min-height: 300px; padding-top: 60px;">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 700px;">
                     <h2 class="centered-heading">Welcome to Migrant Family Support Hub</h2>
                     <p>A platform dedicated to assisting migrant families in Victoria. Discover resources, tools, and fun learning games to ease your transition into Australian culture and education.</p>
@@ -84,13 +84,13 @@
                     <div class="col-lg-6 about-img wow fadeInUp" data-wow-delay="0.5s">
                         <div class="row">
                             <div class="col-12 text-center">
-                                <img class="img-fluid w-75 rounded-circle bg-light p-3" src="img/about-1.jpg" alt="">
+                                <img class="img-fluid w-75 rounded-circle bg-light p-3" src="img/infohub-1.jpg" alt="">
                             </div>
                             <div class="col-6 text-start" style="margin-top: -150px;">
-                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-2.jpg" alt="">
+                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/infohub-2.jpg" alt="">
                             </div>
                             <div class="col-6 text-end" style="margin-top: -150px;">
-                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-3.jpg" alt="">
+                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/infohub-3.jpg" alt="">
                             </div>
                         </div>
                     </div>
