--- a/pages/infohub.html
+++ b/pages/infohub.html
@@ -28,7 +28,6 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="../css/style.css" rel="stylesheet">
     <link href="../css/info_hub.css" rel="stylesheet">
 
     <!-- Responsive Stylesheet -->
@@ -50,9 +49,9 @@
 
 
         <!-- Page Header End -->
-        <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('../img/carousel-2.jpg');">
+        <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('../img/infohubheader-1.jpg');">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4">Classes</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4">Info Hub</h1>
             </div>
         </div>
         <!-- Page Header End -->
