--- a/pages/subport.html
+++ b/pages/subport.html
@@ -47,9 +47,9 @@
         <div id="navbarContainer"></div>  
 
         <!-- Page Header End -->
-        <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('../img/carousel-1.jpg');">
+        <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('../img/subport-1.jpg');">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4">Suburban Portal</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4" >Suburban Portal</h1>
             </div>
         </div>
         <!-- Page Header End -->
