added text in info hub

--- a/pages/infohub.html
+++ b/pages/infohub.html
@@ -52,10 +52,25 @@
         <!-- Page Header End -->
         <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('../img/carousel-2.jpg');">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4">Classes</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4">Info Hub</h1>
             </div>
         </div>
         <!-- Page Header End -->
+
+         <!-- Contact Start -->
+         <div class="container-xxl py-5">
+            <div class="container">
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
+                  <h2 class="mb-3">Victoria's Migration Dynamics: Insights and Challenges</h2>
+                  <p>Dive into the evolving landscape of Victoria's overseas-born population, highlighting significant growth from key countries.
+                    Explore the challenges that accompany these demographic shifts, including language barriers, cultural bias, and education gaps
+                  </p>
+                </div>
+            </div>
+        </div>
+        <!-- Contact End -->
+
+      <div class="divider"></div>
 
         <!-- Appointment Start -->
         <div class="container-xxl py-5">
