update info hub

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
 
     <!-- Template Stylesheet -->
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/home.css">
+    
 </head>
 
 <body>
@@ -52,7 +52,7 @@
         </div>
         <!-- Header End -->
 
-        <!-- Web Detail Start -->
+        <!-- Home Page Detail Start -->
         <div class="container-xxl py-5" >
             <div class="container rounded" style="background-color: #f3e3ea; min-height: 300px; padding-top: 60px;">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 700px;">
@@ -62,7 +62,7 @@
                 </div>
              </div>
         </div>
-        <!-- Web Detail End -->
+        <!-- Home Page Detail End -->
 
         <div class="divider"></div>
 
@@ -214,7 +214,4 @@
     <script src="../js/main.js"></script>
     <script src="../js/home/popupmodal.js"></script>
 </body>
- 
- 
-
 </html>
