update the footer

--- a/pages/infohub.html
+++ b/pages/infohub.html
@@ -56,7 +56,7 @@
         </div>
         <!-- Page Header End -->
 
-         <!-- Contact Start -->
+         <!-- Info Detail Start -->
          <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
@@ -67,11 +67,11 @@
                 </div>
             </div>
         </div>
-        <!-- Contact End -->
+        <!-- Info Detail End -->
 
         <div class="divider" ></div>
 
-        <!-- Appointment Start -->
+        <!-- Line Graph Start -->
         <div class="container-xxl py-5">
             <div class="container rounded" style="background-color: #f5e4b6; min-height: 500px; min-width: 800px;" >
                 <div class="bg-light rounded" >
@@ -95,14 +95,14 @@
                 </div>
             </div>
         </div>
-        <!-- Appointment End -->
+        <!-- Line Graph End -->
 
-        <!-- Appointment Start -->
+        <!-- Bar Graph Start -->
         <div class="container-xxl py-5">
-            <div class="container rounded" style="background-color: #f5cab6; min-height: 525px; min-width: 800px;" >
+            <div class="container rounded" style="background-color: #f5cab6; height: 525px; min-width: 800px;" >
                 <div class="bg-light rounded">
                     <div class="row g-0" style="background-color: #f5cab6;">
-                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px; margin-top: 30px;">
+                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="height: 400px; margin-top: 30px;">
                             <div id="container2" class="position-relative h-100 rounded" style="object-fit: cover; margin-left:10px"></div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
@@ -122,12 +122,12 @@
                 </div>
             </div>
         </div>
-        <!-- Appointment End -->
+        <!-- Bar Graph End -->
         
         <div class="divider" ></div>
 
-        <!-- Classes Start -->
-        <div class="container-xxl py-5">
+    <!-- Challenges Start -->
+    <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 450px;">
                     <h1 class="mb-3">Challenges</h1>
@@ -213,7 +213,7 @@
             </div>
         </div>
     </div>
-    <!-- Classes End -->
+    <!-- Challenges End -->
 
     <div id="footerContainer"></div>
 
